# tia-version-tracker

./: .env.example  .gitignore  README.md  generate_favicon.py  pyproject.toml  requirements.txt  start.bat  test_openness.py
database/: schema.sql
docs/: index.html
src/tia_tracker/: __init__.py  config.py  main.py
src/tia_tracker/database/: db_manager.py
src/tia_tracker/models/: __init__.py
src/tia_tracker/openness/: process_openness.py
src/tia_tracker/routes/: api.py
src/tia_tracker/services/: comparison_service.py  openness_service.py  report_generator.py  snapshot_service.py  zap_extractor.py
static/css/: style.css
static/js/: app.js  comparison.js
templates/: comparison.html  index.html
